jenkins/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-jenkins
  name: k8s-jenkins
spec:
  type: ClusterIP
  ports:
    - name: "8999"
      port: 8999
      targetPort: 8080
    - name: "50000"
      port: 50000
      targetPort: 50000
  selector:
    app: k8s-jenkins
